--- a/src/main/resources/assets/lasef/lang/en_au.json
+++ b/src/main/resources/assets/lasef/lang/en_au.json
@@ -4,6 +4,7 @@
 
   "block.lasef.aluminium_block": "Block Of Aluminium",
   "block.lasef.aluminium_ore": "Aluminium Ore",
+  "block.lasef.aluminium_deepslate_ore": "Deeplate Aluminium Ore",
 
   "creativetab.lasef.lasef_tab": "Lasef Tab",
   "creativetab.lasef.lasef_tab_two": "Lasef Tab Two"
