--- a/src/main/resources/assets/lasef/lang/en_us.json
+++ b/src/main/resources/assets/lasef/lang/en_us.json
@@ -4,6 +4,7 @@
 
   "block.lasef.aluminium_block": "Block Of Aluminum",
   "block.lasef.aluminium_ore": "Aluminum Ore",
+  "block.lasef.aluminium_deepslate_ore": "Deeplate Aluminum Ore",
 
   "creativetab.lasef.lasef_tab": "Lasef Tab",
   "creativetab.lasef.lasef_tab_two": "Lasef Tab Two"
