--- a/src/main/resources/assets/lasef/lang/en_au.json
+++ b/src/main/resources/assets/lasef/lang/en_au.json
@@ -1,10 +1,12 @@
 {
   "item.lasef.aluminium_ingot": "Aluminium Ingot",
   "item.lasef.raw_aluminium": "Raw Aluminium",
+  "item.lasef.temp": "Temp",
 
   "block.lasef.aluminium_block": "Block Of Aluminium",
   "block.lasef.aluminium_ore": "Aluminium Ore",
   "block.lasef.aluminium_deepslate_ore": "Deeplate Aluminium Ore",
+  "block.lasef.magic_block": "Magic Block",
 
   "creativetab.lasef.lasef_tab": "Lasef Tab",
   "creativetab.lasef.lasef_tab_two": "Lasef Tab Two"
